feat: google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: "G-7B6W98881V" # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
@@ -71,7 +71,7 @@ analytics:
 
 # Page views settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: "google-gtag" # now only supports 'goatcounter'
 
 # Prefer color scheme setting.
 #
