--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Seoul
 
 title: uoooooomaep # the main title
 
-tagline: "직업: 초보 개발자" # it will display as the subtitle
+tagline: "Lv25.초보 개발자" # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   개발 블로그
