--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,11 @@ title: uoooooomaep # the main title
 tagline: "Lv25.초보 개발자" # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
+  우맵
+  우맵 블로그
+  임대원
+  대원 블로그
+  우맵의 공유 공간
   개발 블로그
 
 # Fill in the protocol & hostname for your site.
