--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,15 @@ title: uoooooomaep # the main title
 tagline: "Lv25.초보 개발자" # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  우맵
-  우맵 블로그
-  임대원
-  대원 블로그
   우맵의 공유 공간
-  개발 블로그
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://blog.uomaep.com"
+url: 'https://blog.uomaep.com'
+
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 github:
   username: uomaep # change to your GitHub username
@@ -36,7 +35,7 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: DAEWON LIM
+  name: uomaep
   email: uomaep@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
